<resources>
    <string name="app_name">TP Cell</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="personal_details">Personal Detail</string>
    <string name="contact">Contact</string>
    <string name="email_id">Email ID</string>
    <string name="branch">Branch</string>
    <string name="university_id">University ID</string>
    <string name="qualification">Qualification</string>
    <string name="tenth_percent">10th Percentage</string>
    <string name="twelth_percent">12th Percentage</string>
    <string name="aggregate">Aggregate</string>

    <string name="signed_in">Signed In</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="unknown_sign_in_response">Unknown Sign In Response</string>
    <string name="nav_drives">Drives</string>
    <string name="nav_students">Students</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>
    <string name="user_not_logged_in">User not found</string>
    <string name="name_of_drive">Name of Drive</string>
    <string name="drive_desc">Drive Description</string>

    <string name="_10th_aggregate_criteria">10th Aggregate Criteria</string>
    <string name="college_aggregate_criteria">College Aggregate Criteria</string>
    <string name="submit">Submit</string>
    <string name="_12th_aggregate_criteria">12th Aggregate Criteria</string>
    <string name="name_of_student">Name</string>
    <string name="enroll_of_student">Enroll</string>
    <string name="_10th_aggregate">10th Aggregate</string>
    <string name="_12th_aggregate">12th Aggregate</string>
    <string name="college_aggregate">College Aggregate</string>
    <string name="email_of_student">E-mail</string>
    <string name="phone_of_student">Phone</string>
    <string name="eligible_students">Eligible Students</string>

    <string name="action_delete">Delete</string>
    <string name="drive_details_logo">Drive Details Logo</string>
    <string name="drive_details_header_background">Drive Details Header Background</string>


</resources>
