<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_drives"
                android:icon="@drawable/ic_drives_black_24dp"
                android:title="@string/nav_drives" />
        <item
                android:id="@+id/nav_students"
                android:icon="@drawable/ic_students_black_24dp"
                android:title="@string/nav_students"
                android:visible="true" />
        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_profile_black_24dp"
                android:title="@string/nav_profile"
                android:visible="true" />
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/nav_settings"
                android:visible="false" />

        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout_black_24dp"
                android:title="@string/nav_logout" />
    </group>

    <!--
    <item android:title="Contact Us">
        <menu>
            <item
                    android:id="@+id/nav_dev1"
                    android:icon="@drawable/ic_profile_black_24dp"
                    android:title="Nishant Pillai" />
            <item
                    android:id="@+id/nav_dev2"
                    android:icon="@drawable/ic_profile_black_24dp"
                    android:title="Vijay Kumar Sahu" />
            <item
                    android:id="@+id/nav_dev3"
                    android:icon="@drawable/ic_profile_black_24dp"
                    android:title="Adil Warsi" />
        </menu>
    </item>
    -->
</menu>
