<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="181dp"
                android:background="@color/colorPrimary"
                android:elevation="5dp">

            <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="60dp"
                    android:layout_marginBottom="0dp"
                    android:clickable="true"
                    android:elevation="7dp"
                    android:focusable="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_drives_black_24dp"
                    android:tint="#bababa" />

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@color/colorPrimaryDark"
                    android:scaleType="centerCrop" />

        </RelativeLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical"
                android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/drive_layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/drive_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_of_drive" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/drive_layout_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/drive_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/drive_desc" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/drive_layout_10th_aggregate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/drive_10th_aggregate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/_10th_aggregate_criteria" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/drive_layout_12th_aggregate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/drive_12th_aggregate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/_12th_aggregate_criteria" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/drive_layout_college_aggregate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/drive_college_aggregate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/college_aggregate_criteria" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="30dp">

                <com.google.android.material.button.MaterialButton
                        android:id="@+id/drive_submit_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/submit" />

                <com.google.android.material.button.MaterialButton
                        android:id="@+id/drive_eligible_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/eligible_students" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>